# timelapse-gif

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  wrangler.jsonc
.claude/commands/: check-fix-commit-push.md  git-create-branch-commit-pr.md  git-create-branch.md  git-create-commit-pr.md  git-create-commit.md  git-create-pr.md  git-fix-pr.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-web.yml  preview-web.yml  publish.yml
src/timelapse_gif/: __init__.py  cli.py  config.py  gif.py  overlay.py  rename.py
tests/: conftest.py  test_cli.py  test_config.py  test_gif.py  test_overlay.py  test_rename.py
web/: index.html  package-lock.json  package.json  vite.config.ts  wrangler.toml
web/functions/api/: contact.ts
web/public/: _headers  robots.txt  sitemap.xml
web/src/: App.tsx  index.css  main.tsx  worker.ts
web/src/components/: Footer.tsx  FramePreview.tsx  GeneratePanel.tsx  GifPreview.tsx  ImageDropzone.tsx  ImageList.tsx  LanguageSelector.tsx  Layout.tsx  ProgressOverlay.tsx  RenamePanel.tsx  StepGuide.tsx
web/src/hooks/: useGifGeneration.ts  useImageUpload.ts  useRename.ts
web/src/i18n/: en.json  index.ts  ja.json
web/src/lib/: constants.ts  date-utils.ts  exif.ts  gif-encoder.ts  image-utils.ts  overlay.ts  rename.ts  storage.ts  zip-download.ts  zip-upload.ts
web/src/pages/: ContactPage.tsx  FaqPage.tsx  HomePage.tsx  PrivacyPage.tsx  TermsPage.tsx
(+1 files in other folders)
